--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Nexus Band | Connecting Innovation with Excellence</title>
   <meta name="description" content="Nexus Band is a professional digital company connecting innovation with excellence." />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styling.css" />
+ <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
