--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nexus Band | Parent Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styling.css"> <!-- use root stylesheet -->
+  <link rel="stylesheet" href="style.css"> <!-- use root stylesheet -->
 </head>
 <body>
   <div class="auth-page">
