--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         </select>
       </div>
     </div>
+      <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </nav>
 
   <!-- HERO -->
@@ -441,6 +446,15 @@
       const sel = document.getElementById('lang-select');
       if (sel) sel.addEventListener('change', (e)=> applyTranslations(e.target.value));
     })();
+
+    const hamburger = document.querySelector('.hamburger');
+const menu = document.querySelector('.menu');
+
+hamburger.addEventListener('click', () => {
+  menu.classList.toggle('show');
+});
+
+
   </script>
 
  
